--- a/playground/index.html
+++ b/playground/index.html
@@ -6,6 +6,7 @@
 <body>
 <ul>
     <li><a href='./3d/drum.html'>drum in 3d</a></li>
+    <li><a href='./gl-add/index.html'>add in webgl</a></li>
     <li><a href='./matrix/index.html'>test matrix in canvas</a></li>
     <li><a href='./arrow/arrow.html'>arrow in dialog</a></li>
     <li><a href='./attribute_specified/test.html'>dom element attribute test</a></li>
@@ -28,7 +29,7 @@
     <li><a href='./desktop_drag/test.html'>native drag test</a></li>
     <li><a href='./digital-clock/clock.html'>digital clock style</a></li>
     <li><a href='./editor/demo/bangpai-new.html'>early kissy editor demo</a></li>
-    <li><a href='Eidolon_wqx/canvas/Eidolon.html'>a small chaser game </a></li>
+    <li><a href='Eidolon_wqx/yui/Eidolon.html'>2d eidolon game using yui</a></li>
     <li><a href='./entities/entities.html'>html entities</a></li>
     <li><a href='./es6-generator-co/co.html'>co test</a></li>
     <li><a href='./es6-generator-co/delegation.html'>generator delegation test</a></li>
